Added Nuclear Explode and Biome change procedure blocks

--- a/lang/texts.properties
+++ b/lang/texts.properties
@@ -1,5 +1,7 @@
 blockly.block.block_apply_gravity=Apply gravity to block at x:%1 y:%2 z:%3
 blockly.block.block_is_gravity_affected=Is block at x:%1 y:%2 z:%3 affected by gravity-change
+blockly.block.nuclear_explode=Nuclear Explode at x:%1 y:%2 z:%3 power:%4
+blockly.block.world_data_set_biomeat=Set biome at x:%1 y:%2 z:%3 type:
 blockly.category.electrona=Electrona
 trigger.compression=On Compression
 trigger.entity_about_teleport=Entity is about to teleport
